Moved the code to GitHub

--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,8 @@ prefix: "mc!"
 # Change this to the IP address of the Minecraft server.
 ip: ""
 
-# Change this to the directory of the server.jar file
-# Example: C:/User/Ethan/MinecraftServer/server.jar
+# Change this to the directory of the start.bat file
+# Example: C:/User/Ethan/MinecraftServer/start.bat
 serverdir: ""
 
 # Set this to true of false depending on whether you are using playit.gg to run your server
